Added supporting Field sets

--- a/sfdx-source/storybank/main/default/lwc/storybankSubmissionConversionNomOrg/storybankSubmissionConversionNomOrg.html
+++ b/sfdx-source/storybank/main/default/lwc/storybankSubmissionConversionNomOrg/storybankSubmissionConversionNomOrg.html
@@ -7,31 +7,18 @@
           fields={fieldsForConversion} columns="2" mode="readonly">
         </lightning-record-form>
       </div>
+
       <template if:true={isCreateOrgVisible}>
         <h3 class="slds-section-title--divider">Create New Organization Record</h3>
         <div class="slds-form--stacked slds-p-around--medium slds-m-bottom--x-small">
           <lightning-record-edit-form object-api-name="Account">
-            <div class="slds-grid slds-gutters">
-              <div class="slds-col">
-                <lightning-input-field field-name="Name" onchange={handleChange} title="currentOrg-Name"
-                  value={currentOrg.Name}>
-                </lightning-input-field>
-                <lightning-input-field field-name="BillingCity" onchange={handleChange} title="currentOrg-BillingCity"
-                  value={currentOrg.BillingCity}>
-                </lightning-input-field>
-                <lightning-input-field field-name="BillingPostalCode" onchange={handleChange}
-                  title="currentOrg-BillingPostalCode" value={currentOrg.BillingPostalCode}>
-                </lightning-input-field>
-              </div>
-              <div class="slds-col">
-                <lightning-input-field field-name="Phone" onchange={handleChange} title="currentOrg-Phone"
-                  value={currentOrg.Phone}>
-                </lightning-input-field>
-                <lightning-input-field field-name="BillingState" onchange={handleChange} title="currentOrg-BillingState"
-                  value={currentOrg.BillingState}>
-                </lightning-input-field>
-              </div>
-            </div>
+            <lightning-layout multiple-rows>
+              <lightning-layout-item size="6" padding="around-small" for:each={currentOrgWrapper} for:item="item"
+                key={key}>
+                <lightning-input-field field-name={item.fieldAPI} onchange={handleChange} title={item.title}
+                  value={item.value}></lightning-input-field>
+              </lightning-layout-item>
+            </lightning-layout>
           </lightning-record-edit-form>
           <button class="slds-button slds-button_brand slds-align_absolute-center" onclick={handleCreate}>Create Account
             and
@@ -42,53 +29,9 @@
       <template if:true={isTableVisible}>
         <h3 class="slds-section-title--divider">Potential Account Matches</h3>
         <div class="slds-form--stacked slds-p-around--medium slds-m-bottom--x-small">
-          <table class="slds-table slds-table_cell-buffer slds-table_bordered">
-            <thead>
-              <tr class="slds-line-height_reset">
-                <th class="" scope="col">
-                  <div class="slds-truncate">Select</div>
-                </th>
-                <th class="" scope="col">
-                  <div class="slds-truncate">Account Name</div>
-                </th>
-                <th class="" scope="col">
-                  <div class="slds-truncate">Phone</div>
-                </th>
-                <th class="" scope="col">
-                  <div class="slds-truncate">Billing City</div>
-                </th>
-                <th class="" scope="col">
-                  <div class="slds-truncate">Billing State/Province</div>
-                </th>
-                <th class="" scope="col">
-                  <div class="slds-truncate">Billing Zip/Postal Code</div>
-                </th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr class="slds-hint-parent" for:each={existedOrganizations} for:item='row' key={id}>
-                <th data-label="Opportunity Name" scope="row">
-                  <div class="slds-truncate"><a href="javascript:void(0);" tabindex="-1" name={row.Id}
-                      onclick={onSelectClick}>Select</a></div>
-                </th>
-                <td data-label="First Name">
-                  <div class="slds-truncate">{row.Name}</div>
-                </td>
-                <td data-label="Close Date">
-                  <div class="slds-truncate">{row.Phone}</div>
-                </td>
-                <td data-label="Prospecting">
-                  <div class="slds-truncate">{row.BillingCity}</div>
-                </td>
-                <td data-label="Confidence">
-                  <div class="slds-truncate">{row.BillingState}</div>
-                </td>
-                <td data-label="Amount">
-                  <div class="slds-truncate">{row.BillingPostalCode}</div>
-                </td>
-              </tr>
-            </tbody>
-          </table>
+          <lightning-datatable class="datatable" key-field="Id" data={existedOrganizations} columns={columns}
+            hide-checkbox-column onrowaction={rowAction}>
+          </lightning-datatable>
           <button class="slds-button slds-button_brand slds-align_absolute-center" onclick={changeBoolean}
             style="margin-top: 1rem;">Create New Account</button>
         </div>
