--- a/sfdx-source/storybank/main/default/lwc/storybankSubmissionUpdateStoryteller/storybankSubmissionUpdateStoryteller.html
+++ b/sfdx-source/storybank/main/default/lwc/storybankSubmissionUpdateStoryteller/storybankSubmissionUpdateStoryteller.html
@@ -33,7 +33,7 @@
                             </lightning-record-edit-form>
                         </td>
                         <td class="hide-label2">
-                            <lightning-combobox name={item.submittedDataField} label="label" placeholder="Select action"
+                            <lightning-combobox name={item.submittedDataField} label="label" placeholder="No action"
                                 options={item.action} value={item.selectedAction} onchange={onAction}>
                             </lightning-combobox>
                         </td>
