--- a/sfdx-source/storybank/main/default/lwc/storybankSubmissionConversionNominator/storybankSubmissionConversionNominator.html
+++ b/sfdx-source/storybank/main/default/lwc/storybankSubmissionConversionNominator/storybankSubmissionConversionNominator.html
@@ -10,7 +10,9 @@
             <template if:true={isCreateNominatorVisible}>
                 <h3 class="slds-section-title--divider">Create New Nominator Record</h3>
                 <div class="slds-form--stacked slds-p-around--medium slds-m-bottom--x-small">
-                    <lightning-record-edit-form object-api-name="Contact">
+                    <lightning-record-edit-form object-api-name="Contact" onsuccess={handleSuccess}>
+                        <lightning-messages>
+                        </lightning-messages>
                         <lightning-layout multiple-rows>
                             <lightning-layout-item size="6" padding="around-small" for:each={currentNominatorWrapper}
                                 for:item="item" key={key}>
@@ -18,10 +20,10 @@
                                     title={item.title} value={item.value}></lightning-input-field>
                             </lightning-layout-item>
                         </lightning-layout>
+                        <lightning-button class="slds-align_absolute-center" variant="brand" type="submit" name="save"
+                            label="Create Contact and Finish">
+                        </lightning-button>
                     </lightning-record-edit-form>
-                    <button class="slds-button slds-button_brand slds-align_absolute-center"
-                        onclick={handleCreate}>Create Contact and
-                        Finish</button>
                 </div>
             </template>
 
